--- a/components/global/target-audience/target-audience.css
+++ b/components/global/target-audience/target-audience.css
@@ -160,7 +160,7 @@
 
 @media (max-width: 576px) {
     .audience-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
     }
 
@@ -175,9 +175,14 @@
         align-items: center;
     }
 
+    .audience-card:before {
+        height: 72px;
+    }
+
     .audience-icon {
-        width: 50px;
-        height: 50px;
+        width: 36px;
+        height: 36px;
+        margin-top: 0;
     }
 
     .audience-icon svg {
