Placement cards fixed

--- a/components/home/placement-section.css
+++ b/components/home/placement-section.css
@@ -576,4 +576,8 @@
         width: 120px;
         height: 50px;
     }
+
+    .transformation-path .company-text-wrapper {
+        width: 0;
+    }
 }
